# homework_12.1

./: .gitignore  README.md  pyproject.toml
src/: decorators.py  external_api.py  generators.py  main.py  masks.py  processing.py  utils.py  widget.py  widget_csv.py  widget_excel.py
tests/: test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py  test_widget_csv.py  test_widget_excel.py
