[project]
name = "homework-12-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Алексей Вишницкий",email = "alexei.vishnitsky@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "homework_12"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
dependencies = [
    "python>=3.12",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "requests>=2.31.0",
    "matplotlib>=3.8.4",
    "seaborn>=0.13.2",
    "openpyxl>=3.1.2"
]


[tool.isort]
# максимальная длина строки
line_length = 119

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'
